--- a/index.html
+++ b/index.html
@@ -23,40 +23,45 @@
         </header>
         <main>
             <section id="home">
-                <div class="container">
+                <div class="container-welcome">
                     <h2>Bem vindo</h2>
-                    <p>Aqui nos temos informaçoes para ajudar a adotar um pet</p>
+                    <p>Aqui nós temos informaçoes para ajudar a adotar um pet</p>
                 </div>
             </section>
             <section id ="adocao">
-                <div class ="container">
-                    <h2>Adoção</h2>
-                    <div class = "project-grid">
-                        <img src="projec.jpg" alt = "Projeto 1">
+                <div class ="container-adocao">
+                    <div class="subt-adocao-container">
+                        <h2 class="subt-adocao">Adoção</h2>
+                    </div>
+                    <div class = "project-grid-1">
+                        <img src="assets/cachorro-coitado.jpg" alt = "Projeto 1" class="img-grid">
                         <h3>Projeto 1</h3>
                         <p>Descrição do projeto</p>
-                        <div class = "project-grid">
-                            <img src="projec.jpg" alt = "Projeto 2">
-                            <h3>Projeto 2</h3>
-                            <p>Descrição do projeto</p>
-                            <div class = "project-grid">
-                                <img src="projec.jpg" alt = "Projeto 3">
-                                <h3>Projeto 3</h3>
-                                <p>Descrição do projeto</p>
-                                <div class = "project-grid">
-                                    <img src="projec.jpg" alt = "Projeto 4">
-                                    <h3>Projeto 4</h3>
-                                    <p>Descrição do projeto</p>
+                    </div>
+                    <div class = "project-grid-2">
+                        <img src="assets/gatinho.png" alt = "Projeto 2" class="img-grid">
+                        <h3>Projeto 2</h3>
+                        <p>Descrição do projeto</p>
+                    </div>
+                    <div class = "project-grid-3">
+                        <img src="projec.jpg" alt = "Projeto 3">
+                        <h3>Projeto 3</h3>
+                        <p>Descrição do projeto</p>
+                    </div>    
+                    <div class = "project-grid-4">
+                        <img src="projec.jpg" alt = "Projeto 4">
+                        <h3>Projeto 4</h3>
+                        <p>Descrição do projeto</p>
                     </div>
                 </div>
             </section>
             <section id="sobre_nos">
-                <h2> Sobre nos</h2>
+                <h2>Sobre nos</h2>
                 <p>Somos a equipe Mi-Au</p>
             </section>
             <section id="contact">
             <h2>Contato</h2>
-            <p> Entre em conato conosco atraves do formulario abaixo</p>
+            <p>Entre em conato conosco atraves do formulario abaixo</p>
             <form id="contact-form">
                 <label for="name">Nome:</label>
                 <input type="text" id="name" name="name" required>
