--- a/index.html
+++ b/index.html
@@ -35,28 +35,30 @@
                     </div>
                     <div class = "project-grid-1">
                         <img src="assets/cachorro-coitado.jpg" alt = "Projeto 1" class="img-grid">
-                        <h3>Projeto 1</h3>
-                        <p>Descrição do projeto</p>
+                        <h3>Luke</h3>
+                        <p class="description-animal">Éden - 3h atrás</p>
                     </div>
                     <div class = "project-grid-2">
-                        <img src="assets/gatinho.png" alt = "Projeto 2" class="img-grid">
-                        <h3>Projeto 2</h3>
-                        <p>Descrição do projeto</p>
+                        <img src="assets/gato fofo.jpeg" alt = "Projeto 2" class="img-grid">
+                        <h3>Alok</h3>
+                        <p class="description-animal">Vila Hortência - 2d atrás</p>
                     </div>
                     <div class = "project-grid-3">
-                        <img src="projec.jpg" alt = "Projeto 3">
-                        <h3>Projeto 3</h3>
-                        <p>Descrição do projeto</p>
+                        <img src="assets/cachorroanao.jpeg" alt = "Projeto3" class="img-grid">
+                        <h3>Princesa</h3>
+                        <p class="description-animal">Vila Haro - 1sem atás</p>
+                        <p></p>
                     </div>    
                     <div class = "project-grid-4">
-                        <img src="projec.jpg" alt = "Projeto 4">
-                        <h3>Projeto 4</h3>
-                        <p>Descrição do projeto</p>
+                        <img src="assets/gatocolo.jpeg" alt = "Projeto 4" class="img-grid">
+                        <h3>Léia</h3>
+                        <p class="description-animal">Jd. Europa - 5d atrás</p>
                     </div>
                 </div>
             </section>
             <section id="sobre_nos">
                 <h2>Sobre nos</h2>
+                <img src="" alt="Grupo Mi-Au" class="img-grupo-miau">
                 <p>Somos a equipe Mi-Au</p>
             </section>
             <section id="contact">
