--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class = "project-grid-1">
                         <img src="assets/cachorro-coitado.jpg" alt = "Projeto 1" class="img-grid">
-                        <h3>Luke</h3>
+                        <button class="dpdown-button">Luke</button>
                         <p class="description-animal">Éden - 3h atrás</p>
                     </div>
                     <div class = "project-grid-2">
@@ -47,7 +47,6 @@
                         <img src="assets/cachorroanao.jpeg" alt = "Projeto3" class="img-grid">
                         <h3>Princesa</h3>
                         <p class="description-animal">Vila Haro - 1sem atás</p>
-                        <p></p>
                     </div>    
                     <div class = "project-grid-4">
                         <img src="assets/gatocolo.jpeg" alt = "Projeto 4" class="img-grid">
