--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </div>
                     <div class = "project-grid-1">
                         <img src="assets/cachorro-coitado.jpg" alt = "Projeto 1" class="img-grid">
-                        <button class="dpdown-button">Luke</button>
-                        <p class="description-animal">Éden - 3h atrás</p>
+                        <h3>Luke</h3>
+                        <p class="p-place-hour">Éden - 3h atrás</p>
                     </div>
                     <div class = "project-grid-2">
                         <img src="assets/gato fofo.jpeg" alt = "Projeto 2" class="img-grid">
