--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
                     <div class = "project-grid-2">
                         <img src="assets/gato fofo.jpeg" alt = "Projeto 2" class="img-grid">
                         <h3>Alok</h3>
-                        <p class="description-animal">Vila Hortência - 2d atrás</p>
+                        <p class="p-place-hour">Vila Hortência - 2d atrás</p>
                     </div>
                     <div class = "project-grid-3">
                         <img src="assets/cachorroanao.jpeg" alt = "Projeto3" class="img-grid">
                         <h3>Princesa</h3>
-                        <p class="description-animal">Vila Haro - 1sem atás</p>
+                        <p class="p-place-hour">Vila Haro - 1sem atás</p>
                     </div>    
                     <div class = "project-grid-4">
                         <img src="assets/gatocolo.jpeg" alt = "Projeto 4" class="img-grid">
                         <h3>Léia</h3>
-                        <p class="description-animal">Jd. Europa - 5d atrás</p>
+                        <p class="p-place-hour">Jd. Europa - 5d atrás</p>
                     </div>
                 </div>
             </section>
