--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
             </section>
             </main>
             <footer>
-                <p>&copy; 2024 Miau. Todos os direitos reservados</p>
+                <div class="p-footer-container">
+                    <p class="p-footer">&copy; 2024 Miau. Todos os direitos reservados</p>
+                </div>
             </footer>
             <script src="script.js"> </script>
     </body>
