--- a/index.html
+++ b/index.html
@@ -61,25 +61,28 @@
                 <p>Somos a equipe Mi-Au</p>
             </section>
             <section id="contact">
-            <h2>Contato</h2>
-            <p>Entre em conato conosco atraves do formulario abaixo</p>
-            <form id="contact-form">
-                <label for="name">Nome:</label>
-                <input type="text" id="name" name="name" required>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <label for="message">Mensagem:</label>
-                <textarea id="messsage" name=""message required></textarea>
-                <button type="submit">Enviar</button>
-            </form>
-            </section>
-            </main>
-            <footer>
-                <div class="p-footer-container">
-                    <p class="p-footer">&copy; 2024 Miau. Todos os direitos reservados</p>
+                <img src="assets/phone-dawg.jpg" alt="Perro en el Teléfono" class="img-dawg">
+                <div class="grid-div">
+                    <h2>Contato</h2>
+                    <p class="p-contacts">Entre em conato conosco através do formulário abaixo! Receberemos todos os chamados por nossos animais!</p>
+                    <form id="contact-form">
+                        <label for="name">Nome:</label>
+                        <input type="text" id="name" name="name" required class="text-box" placeholder=" Ex: Vira-Lata Caramelo Carvalho">
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required class="text-box" placeholder=" Ex: papagaio.falamuito@gmail.com">
+                        <label for="message">Mensagem:</label>
+                        <textarea id="messsage" name=""message required class="text-box" placeholder=" Ex: No bairro (X) foi encontrado um cachorro/gato em estado (X)..."></textarea>
+                        <button type="submit" class="button-form">Enviar</button>
+                    </form>
                 </div>
-            </footer>
-            <script src="script.js"> </script>
+            </section>
+        </main>
+        <footer>
+            <div class="p-footer-container">
+                <p class="p-footer">&copy; 2024 Miau. Todos os direitos reservados</p>
+                </div>
+        </footer>
+    <script src="script.js"> </script>
     </body>
 
 </html>
