--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section id="home">
                 <div class="container-welcome">
                     <h2>Bem vindo</h2>
-                    <p>Aqui nós temos informaçoes para ajudar a adotar um pet</p>
+                    <p>Aqui vamos te ajudar a encontrar seu animalzinho perdido ou fazer a adoção de algum pet!</p>
                 </div>
             </section>
             <section id ="adocao">
@@ -34,7 +34,7 @@
                         <h2 class="subt-adocao">Adoção</h2>
                     </div>
                     <div class = "project-grid-1">
-                        <img src="assets/cachorro-coitado.jpg" alt = "Projeto 1" class="img-grid">
+                        <img src="assets/cachorro-pidao.png" alt = "Projeto 1" class="img-grid">
                         <h3>Luke</h3>
                         <p class="p-place-hour">Éden - 3h atrás</p>
                     </div>
@@ -44,7 +44,7 @@
                         <p class="p-place-hour">Vila Hortência - 2d atrás</p>
                     </div>
                     <div class = "project-grid-3">
-                        <img src="assets/cachorroanao.jpeg" alt = "Projeto3" class="img-grid">
+                        <img src="assets/gato-branco.png" alt = "Projeto3" class="img-grid">
                         <h3>Princesa</h3>
                         <p class="p-place-hour">Vila Haro - 1sem atás</p>
                     </div>    
@@ -56,9 +56,9 @@
                 </div>
             </section>
             <section id="sobre_nos">
-                <h2>Sobre nos</h2>
+                <h2>Sobre nós</h2>
                 <img src="" alt="Grupo Mi-Au" class="img-grupo-miau">
-                <p>Somos a equipe Mi-Au</p>
+                <p class="p-sobre-nos">Somos a equipe Mi-Au, iniciado em 2023 como um projeto do Senac Sorocaba, com o objetivo de diminuir o abandono animal, incentivar a adoção através do nosso site e conscientizar sobre os malefícios das práticas da venda de animais domésticos. Nossa missão é ajudar os animais abandonados a encontrarem uma família responsável e feliz. A plataforma não só auxilia na busca como facilita a adoção de pets, com o compromisso do bem-estar animal. Depois de uma pesquisa feita pelo nosso grupo, percebemos o número altissimo de cães e gatos em cituação de rua, e foi isso que nos inspirou a criação do nosso projeto. </p>
             </section>
             <section id="contact">
                 <img src="assets/phone-dawg.jpg" alt="Perro en el Teléfono" class="img-dawg">
