--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <nav>
                     <ul>
                         <li><a href="#home">Home</a></li>
-                        <li><a href="#Adocao">Adoção</a></li>
-                        <li><a href="#Sobre_nos">Sobre nós</a></li>
-                        <li><a href="#Contato">Contato</a></li>
+                        <li><a href="#adocao">Adoção</a></li>
+                        <li><a href="#sobre_nos">Sobre nós</a></li>
+                        <li><a href="#contact">Contato</a></li>
                         
                     </ul>
                 </nav>
@@ -24,7 +24,10 @@
         <main>
             <section id="home">
                 <div class="container-welcome">
-                    <h2>Bem vindo</h2>
+                    <div class="flex-container">
+                        <h2>Bem-vindo!</h2>
+                        <img src="assets/logo-miau.jpeg" alt="Logo Mi-Au">
+                    </div>
                     <p>Aqui vamos te ajudar a encontrar seu animalzinho perdido ou fazer a adoção de algum pet!</p>
                 </div>
             </section>
