--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
             <section id="home">
                 <div class="container-welcome">
                     <div class="flex-container">
-                        <h2>Bem-vindo!</h2>
-                        <img src="assets/logo-miau.jpeg" alt="Logo Mi-Au">
+                        <h2 class="subt-welcome">Bem-vindo!</h2>
+                        <div class="img-logo-container">
+                            <img src="assets/logo-miau-bgremoved.png" alt="Logo Mi-Au" class="img-logo">
+                        </div>
                     </div>
-                    <p>Aqui vamos te ajudar a encontrar seu animalzinho perdido ou fazer a adoção de algum pet!</p>
+                    <div class="p-welcome-container">
+                        <p>Aqui vamos te ajudar a encontrar seu animalzinho perdido ou fazer a adoção de algum pet!</p>
+                    </div>
                 </div>
             </section>
             <section id ="adocao">
