--- a/index.html
+++ b/index.html
@@ -62,10 +62,11 @@
                     </div>
                 </div>
             </section>
+            <hr class="blackline">
             <section id="sobre_nos">
-                <h2>Sobre nós</h2>
-                <img src="" alt="Grupo Mi-Au" class="img-grupo-miau">
                 <p class="p-sobre-nos">Somos a equipe Mi-Au, iniciado em 2023 como um projeto do Senac Sorocaba, com o objetivo de diminuir o abandono animal, incentivar a adoção através do nosso site e conscientizar sobre os malefícios das práticas da venda de animais domésticos. Nossa missão é ajudar os animais abandonados a encontrarem uma família responsável e feliz. A plataforma não só auxilia na busca como facilita a adoção de pets, com o compromisso do bem-estar animal. Depois de uma pesquisa feita pelo nosso grupo, percebemos o número altissimo de cães e gatos em cituação de rua, e foi isso que nos inspirou a criação do nosso projeto. </p>
+                <img src="assets/image.png" alt="Grupo Mi-Au" class="img-grupo-miau">
+                <h2>Sobre nós</h2>
             </section>
             <section id="contact">
                 <img src="assets/phone-dawg.jpg" alt="Perro en el Teléfono" class="img-dawg">
