--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section id="home">
                 <div class="container-welcome">
                     <div class="flex-container">
-                        <h2 class="subt-welcome">Bem-vindo!</h2>
+                        <h2 class="subt-welcome">Bem-vind</h2>
                         <div class="img-logo-container">
                             <img src="assets/logo-miau-bgremoved.png" alt="Logo Mi-Au" class="img-logo">
                         </div>
